[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtools-webhook-cicd-utils"
version = "1.6.0"
description = "Lightweight webhook utilities for CI/CD pipeline integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["webhook", "cicd", "devops", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
